# atom-haskell-utils

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tslint.json
hs/: .gitignore  .npmignore  Cabal.hs  Exports.js  Foreign.hs  LICENSE  Main.hs  Makefile  Parser.hs  hs.cabal  hs.min.d.ts  stack.yaml
hs/src/: Main.hs  Util.hs
src/: util.coffee  util.ts
typings/: atom-generate.d.ts  hs.d.ts
