name: hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: root@livid.pp.ru
author: Nikolay Yakimov

executable hs
    main-is: Main.hs
    other-modules: Parser, Cabal, Foreign
    build-depends:
        base >=4.8 && <4.9,
        aeson >=0.9 && <0.11,
        filepath >=1.4 && <1.5,
        Cabal >=1.20 && <1.23,
        haskell-src-exts >=1.17 && <1.19,
        ghcjs-base ==0.2.*
    default-language: Haskell2010
    other-extensions: OverloadedStrings ViewPatterns TupleSections
    cpp-options: -DGHCJS_BROWSER
