name: hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: root@livid.pp.ru
author: Nikolay Yakimov

executable hs
    main-is: Main.hs
    other-modules: Parser, Cabal, Foreign, Util
    hs-source-dirs: src
    build-depends:
        base,
        aeson,
        filepath,
        Cabal,
        haskell-src-exts,
        ghcjs-base
    default-language: Haskell2010
    other-extensions: OverloadedStrings ViewPatterns TupleSections
    cpp-options: -DGHCJS_BROWSER
